fixed small miss alignments

--- a/src/assets/Navbar.css
+++ b/src/assets/Navbar.css
@@ -28,7 +28,7 @@
 
 .nav-list li a {
   text-decoration: none;
-  
+  color: #fff;
   font-size: 18px;
   font-weight: 500;
   transition: color 0.3s ease;
